1.0.0 (currently working on)
- [#4165] Cleanup: Change BagBuilder_Registration::limitToAttendee to expect an FE user model
- [#4159] Fix: In the notification e-mail to the organizers, add a LF before the field data if the field data contains a LF or CR
- [#4151] Feature: Display the e-mail address and position of the FE user on the second registration page
- [#4150] Feature: Add two fields "e-mail" and "position" for additional attendees
- [#4149] Feature: Add some configuration to TS Setup and the flexforms
- [#4144] Fix: Test crash and SQL error in the pi2 test
- [#4132] Cleanup: Use the time constants from tx_oelib_Time
- [#4130] Fix: Set the numeric locale in our CLI scripts
- [#4125] Fix: Check all class_exists for the correct use of the autoload flag
- [#4024] Fix: Test failure: tx_seminars_Mapper_EventTest::getOrganizersWithOneOrganizerReturnsOneOrganizer
- [#4047] Cleanup: Rename all test classes from *_testcase to *Test
- [#3889] Change: Disable the CSV export button in the events menu if there are no registrations for that event
- [#4116] Change: Drop the option for the manual sorting of event records in the BE
- [#3901] Change: The AJAX module needs to check the BE user rights
- [#4115] Change: Cache the locallang labels in a JavaScript file
- [#3917] Change: Use the PID from the BE user groups when creating new records
- [#3892] Fix: Table headings for registrations, speakers and organizers are incorrect
- [#4094] Fix: Use empty configurations in the unit tests
- [#4008] Change: Use the single view link builder class in the FE and BE
- [#4005] Feature: Add a single view link builder class
- [#4006] Feature: Add getters for the single view page to the category and event type model
- [#4009] Change: The OldModels should provide the Mapper with the data to reduce double DB requests
- [#4007] Change: Provide the new event model in places where single view links get created
- [#4002] Feature: Add a method "find by begin date" to the event mapper